[gd_scene load_steps=16 format=3 uid="uid://bjye5fpmo3pkr"]

[ext_resource type="Script" uid="uid://bsx5klcuk8iyr" path="res://UI/game_choice.gd" id="1_nvxhv"]
[ext_resource type="FontFile" uid="uid://7pd1bf7pp0t6" path="res://Assets/m6x11.ttf" id="1_u7tnk"]
[ext_resource type="Texture2D" uid="uid://de188pevfg4ss" path="res://Assets/rural area/ruralparallaxsky.png" id="2_fkh07"]
[ext_resource type="Script" uid="uid://dxrotpw0o1it7" path="res://UI/AdjustScale.gd" id="2_kmbcv"]
[ext_resource type="Texture2D" uid="uid://bmdh7l2tpdljk" path="res://Assets/rural area/ruralparallaxclouds.png" id="3_0lt88"]
[ext_resource type="Texture2D" uid="uid://cm2vp23tt30ck" path="res://Assets/rural area/ruralparallaxmountainback2.png" id="4_sjngh"]
[ext_resource type="Texture2D" uid="uid://cg5q3h6s3arvm" path="res://Assets/rural area/ruralparallaxmountainback.png" id="5_qsl3k"]
[ext_resource type="Texture2D" uid="uid://ba73jlif1ffj1" path="res://Assets/rural area/ruralparallaxmountain.png" id="6_nvxhv"]
[ext_resource type="Texture2D" uid="uid://cpy0dqimybkve" path="res://Assets/rural area/ruralparallaxriver.png" id="7_kmbcv"]
[ext_resource type="Texture2D" uid="uid://d3agarl0dh7pp" path="res://Assets/rural area/ruralparallaxriverfront.png" id="8_vtf66"]
[ext_resource type="Texture2D" uid="uid://cd4wbis5qrt6m" path="res://Assets/rural area/ruralparallaxriverskyredlex.png" id="9_rlxr7"]
[ext_resource type="Texture2D" uid="uid://0lx4q108njse" path="res://Assets/rural area/ruralparallaxvillage.png" id="10_jd6pk"]
[ext_resource type="Texture2D" uid="uid://3wqkrnva7p8b" path="res://Assets/Racing_AssetPack_Personal/map1p.png" id="11_qsl3k"]
[ext_resource type="Texture2D" uid="uid://8pifsdpxtlj6" path="res://Assets/Racing_AssetPack_Personal/map2p.png" id="12_nvxhv"]
[ext_resource type="Texture2D" uid="uid://bgdwty2wupvfc" path="res://Assets/Racing_AssetPack_Personal/map3p.png" id="13_kmbcv"]

[node name="GameChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvxhv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sky" type="Parallax2D" parent="CanvasLayer"]
z_index = -1
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Sky"]
position = Vector2(576.5, 325)
scale = Vector2(0.5, 0.6)
texture = ExtResource("2_fkh07")

[node name="clouds" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1750, 0)
autoscroll = Vector2(-10, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/clouds"]
position = Vector2(871.65, 321.5)
scale = Vector2(0.458605, 0.539167)
texture = ExtResource("3_0lt88")

[node name="grayMesh" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1152, 0)
autoscroll = Vector2(-10, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/grayMesh"]
position = Vector2(574.5, 318)
scale = Vector2(0.302895, 0.531667)
texture = ExtResource("4_sjngh")

[node name="greenMesh" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1152, 0)
autoscroll = Vector2(-10, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/greenMesh"]
position = Vector2(578, 320.5)
scale = Vector2(0.302105, 0.540833)
texture = ExtResource("5_qsl3k")

[node name="mountain" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1750, 0)
autoscroll = Vector2(-50, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/mountain"]
position = Vector2(875, 327)
scale = Vector2(0.461053, 0.545)
texture = ExtResource("6_nvxhv")

[node name="river" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1152, 0)
autoscroll = Vector2(-600, 0)
repeat_times = 2
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/river"]
position = Vector2(576, 323.5)
scale = Vector2(0.303684, 0.540833)
texture = ExtResource("7_kmbcv")

[node name="GreenLine" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1152, 0)
autoscroll = Vector2(-600, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/GreenLine"]
position = Vector2(576.5, 323.5)
scale = Vector2(0.303947, 0.5425)
texture = ExtResource("8_vtf66")

[node name="SkyInRiver" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1750, 0)
autoscroll = Vector2(-10, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/SkyInRiver"]
position = Vector2(875, 322.5)
scale = Vector2(0.461053, 0.539167)
texture = ExtResource("9_rlxr7")

[node name="Village" type="Parallax2D" parent="CanvasLayer"]
repeat_size = Vector2(1800, 0)
autoscroll = Vector2(-300, 0)
script = ExtResource("2_kmbcv")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Village"]
position = Vector2(916, 324)
scale = Vector2(0.483421, 0.544167)
texture = ExtResource("10_jd6pk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 80
text = "CHOOSE MAP"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 195
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 45
text = "Dessert"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 45
text = "GrassLand"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 45
text = "SnowLand"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 110
alignment = 1

[node name="map1" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("11_qsl3k")

[node name="map2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_nvxhv")

[node name="map3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_kmbcv")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 295
alignment = 1

[node name="desset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 30
text = "START"
flat = true

[node name="grassland" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 30
text = "START"
flat = true

[node name="snow" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 35
text = "START"
flat = true

[node name="Button" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.076
anchor_bottom = 0.074
offset_left = 29.0
offset_top = 25.0
offset_right = 28.448
offset_bottom = 25.048
theme_override_fonts/font = ExtResource("1_u7tnk")
theme_override_font_sizes/font_size = 45
text = "BACK"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/desset" to="." method="_on_desset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/grassland" to="." method="_on_grassland_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/snow" to="." method="_on_snow_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
